# pdf2htmlEX

./: .gitattributes  .gitignore  .travis.yml  .travis.yml.off  .travis.yml.orig20190930  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  INSTALL  LICENSE  PopplerReleases.md  README.md  _config.yml  build-centos.sh  build.spec  build_dists.py  build_for_ppa.py  build_prototype.sh  dobuildClang  doinstall  index.md  pdf2htmlex.rb
.github/: FUNDING.yml
.github/workflows/: build.yml
.travisScripts/: buildPoppler.sh  copyScriptsToBin  installPoppler.sh  setupTests.sh
_layouts/: default.html
archive/debian/: copyright  rules
assets/css/: pdf2htmlexPrint.css  pdf2htmlexStyle.css
buildScripts/: PKGBUILD  Readme.md  assembleAppImage  buildFontforge  buildInstallLocally  buildInstallLocallyAlpine  buildInstallLocallyApt  buildInstallLocallyBrew  buildInstallLocallyDnf  buildPdf2htmlEX  buildPdf2htmlEXClang  buildPoppler  cleanPdf2htmlEX  createAlpineTarFile  createAppImage  createContainerAlpineImageFromTarFile  createContainerUbuntuImageFromDeb  createDebianPackage  createDockerAlpineImageFromTarFile  createDockerAlpineImageInside  createDockerAlpineImageOutside  createDockerImage  createDockerImageInside  createDockerImageOutside  createDockerUbuntuImageFromDeb  createImages  createImagesAlpine  createImagesApt  doItAll  doItAllLocally  doItAllTravis  dockerFunctions  fontforgeConfig.site  getBuildTools  getBuildToolsAlpine  getBuildToolsApt  getBuildToolsBrew  getBuildToolsDnf  getBuildToolsHomeBrew  getDevLibraries  (+31 more)
debian/: changelog  control  rules
demo/: LauZiDaoDeJingProjectGutenberg7337ByChingYiChen.html
docker/: Dockerfile.bookworm
patches/: fontforge-20170731-fixGDraw.patch  fontforge-20170731-fixGitVersion.patch
pdf2htmlEX/: CMakeLists.txt  CMakeLists.txt.patch  pdf2htmlEX.1.in
pdf2htmlEX/share/: base.css.in  fancy.css.in  manifest  pdf2htmlEX.js.in
pdf2htmlEX/src/: CoveredTextDetector.cc  CoveredTextDetector.h  DrawingTracer.cc  DrawingTracer.h  Param.h  Preprocessor.cc  Preprocessor.h  pdf2htmlEX.cc
pdf2htmlEX/src/BackgroundRenderer/: CairoBackgroundRenderer.cc  CairoBackgroundRenderer.h  SplashBackgroundRenderer.cc  SplashBackgroundRenderer.h
pdf2htmlEX/src/HTMLRenderer/: HTMLRenderer.h  draw.cc  font.cc  form.cc  general.cc  image.cc  link.cc  outline.cc  state.cc  text.cc
pdf2htmlEX/src/util/: SignalHandler.cc  SignalHandler.h  encoding.cc  encoding.h  ffw.c  ffw.h  unicode.cc  unicode.h
pdf2htmlEX/src/util/fontforge-20190801/: Readme.md
pdf2htmlEX/test/: README.md  browser_tests.py  compareTestImages  installAutomaticTestSoftware  installAutomaticTestSoftwareApt  installAutomaticTestSoftwareDnf  installManualTestSoftware  produceHtmlForBrowserTests  regenerateTest  runLocalBrowserTests  runLocalTests  runLocalTestsBash  runLocalTestsPython  runLocalTestsShell  test.py.in  testOutput  test_local_browser.py  test_output.py
pdf2htmlEX/test/browser_tests/fontfile3_opentype/: fontfile3_opentype.html
pdf2htmlEX/test/browser_tests/geneve_1564/: geneve_1564.html
pdf2htmlEX/test/browser_tests/svg_background_with_page_rotation_issue402/: svg_background_with_page_rotation_issue402.html
pdf2htmlEX/test/browser_tests/with_form/: with_form.html
src/: Preprocessor.h  pdf2htmlEX-config.h.in  pdf2htmlEX.cc
src/BackgroundRenderer/: CairoBackgroundRenderer.cc  CairoBackgroundRenderer.h  SplashBackgroundRenderer.cc  SplashBackgroundRenderer.h
src/HTMLRenderer/: HTMLRenderer.h  font.cc  general.cc  image.cc  link.cc  outline.cc  text.cc
src/util/: ffw.c
test/: test_local_browser.py
testScripts/: doItAll  doItAllTravis  runLocalTests
